hphp/test/slow/parser/static_call_access_const_expr.php.expectf
Fatal error: Only classnames and variables are allowed before `::`. in %s/static_call_access_const_expr.php on line 10
